Fix header spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,6 +68,7 @@ body.grid {
 .wrapper {
     max-width: 1440px;
     margin: 0 auto;
+    padding: 0 calc(var(--spacing) * 10);
     width: 100%;
 }
 
